# mlx90640-opcua

./: README.md
client/: README.md  app.spec  pyproject.toml
client/embedded_device/: app.py  pyinstaller.py  thermal_viewer.qml
client/embedded_device/app_configuration/: app_configs.py  embedded_device_config.json
client/embedded_device/multithreading/: buffer.py  producer.py
server/: README.md  server_sensor_data_opcua.py
